fix img wrap

--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,7 @@ nav li a, nav li a:focus, nav li a:hover {
 }
 .project-img {
 	display: flex;
+	flex-flow: row wrap;
 	justify-content: space-around;
 	margin-top: 40px;
 	margin-bottom: 15px;
